--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ config/xaerominimap_entities.json
 usernamecache.json
 config/xaerominimap_entities.json
 config/oculus.properties
+mods.rar
+Side project v2 1.16.5.zip
+config/oculus.properties
+config/bosstools-performance-client.toml
+config/xaerominimap_entities.json
