zinc plates and zinc hand, removed enigmatic hammer

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Side project v2 1.16.5.zip
 config/oculus.properties
 config/bosstools-performance-client.toml
 config/xaerominimap_entities.json
+config/jei/bookmarks.ini
