--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -50,6 +50,18 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:bone_armor_head, mana-and-artifice:bone_armor_chest, mana-and-artifice:bone_armor_leggings, mana-and-artifice:bone_armor_boots
+    #  [default: ]
+    S:BONE <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:broken_hood, mana-and-artifice:broken_robes, mana-and-artifice:broken_leggings, mana-and-artifice:broken_boots
+    #  [default: ]
+    S:BROKEN <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: minecraft:chainmail_helmet, minecraft:chainmail_chestplate, minecraft:chainmail_leggings, minecraft:chainmail_boots
     #  [default: [Chainmail], [Chain], [Chain Link], [Scale]]
     S:CHAIN <
@@ -66,6 +78,18 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:council_armor_head, mana-and-artifice:council_armor_chest, mana-and-artifice:council_armor_leggings, mana-and-artifice:council_armor_boots
+    #  [default: ]
+    S:COUNCIL <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:demon_armor_head, mana-and-artifice:demon_armor_chest, mana-and-artifice:demon_armor_leggings, mana-and-artifice:demon_armor_boots
+    #  [default: ]
+    S:DEMON <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: minecraft:diamond_helmet, minecraft:diamond_chestplate, minecraft:diamond_leggings, minecraft:diamond_boots, draconicevolution:wyvern_chestpiece, draconicevolution:draconic_chestpiece, draconicevolution:chaotic_chestpiece
     #  [default: [Diamond], [Zircon], [Gemstone], [Jewel], [Crystal]]
     S:DIAMOND <
@@ -77,6 +101,12 @@ armors {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:fey_armor_head, mana-and-artifice:fey_armor_chest, mana-and-artifice:fey_armor_leggings, mana-and-artifice:fey_armor_boots
+    #  [default: ]
+    S:FEY <
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
     # Items in this group: minecraft:golden_helmet, minecraft:golden_chestplate, minecraft:golden_leggings, minecraft:golden_boots
     #  [default: [Golden], [Gold], [Gilt], [Auric], [Ornate]]
     S:GOLD <
@@ -85,6 +115,12 @@ armors {
         Gilt
         Auric
         Ornate
+     >
+
+    # A list of material-based prefix names for this material group. May be empty.
+    # Items in this group: mana-and-artifice:mage_hood, mana-and-artifice:mage_robes, mana-and-artifice:mage_leggings, mana-and-artifice:mage_boots
+    #  [default: ]
+    S:INFUSED_SILK <
      >
 
     # A list of material-based prefix names for this material group. May be empty.
@@ -924,7 +960,7 @@ items {
 
 tools {
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, twilightforest:minotaur_axe, twilightforest:mazebreaker_pickaxe, mekanismtools:diamond_paxel
+    # Items in this group: minecraft:diamond_sword, minecraft:diamond_shovel, minecraft:diamond_pickaxe, minecraft:diamond_axe, minecraft:diamond_hoe, twilightforest:minotaur_axe, twilightforest:mazebreaker_pickaxe, mekanismtools:diamond_paxel, mana-and-artifice:bound_sword, mana-and-artifice:bound_axe
     #  [default: [Diamond], [Zircon], [Gemstone], [Jewel], [Crystal]]
     S:DIAMOND <
         Diamond
@@ -963,7 +999,7 @@ tools {
      >
 
     # A list of material-based prefix names for this material group. May be empty.
-    # Items in this group: minecraft:netherite_sword, minecraft:netherite_shovel, minecraft:netherite_pickaxe, minecraft:netherite_axe, minecraft:netherite_hoe, mekanismtools:netherite_paxel
+    # Items in this group: minecraft:netherite_sword, minecraft:netherite_shovel, minecraft:netherite_pickaxe, minecraft:netherite_axe, minecraft:netherite_hoe, mekanismtools:netherite_paxel, mana-and-artifice:allfather_axe
     #  [default: [Burnt], [Embered], [Fiery], [Hellborn], [Flameforged]]
     S:NETHERITE <
         Burnt
