--- a/config/apotheosis/enchantments.cfg
+++ b/config/apotheosis/enchantments.cfg
@@ -555,6 +555,201 @@
 }
 
 
+"mana-and-artifice:aura-depths" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-healing" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-jumping" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-mining" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-pilgrim" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-repair" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:aura-running" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:beheading" {
+    # The max level of this enchantment - normally 5. [range: 1 ~ 127, default: 9]
+    I:"Max Level"=9
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:bouncing" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:cloudstep" {
+    # The max level of this enchantment - normally 3. [range: 1 ~ 127, default: 7]
+    I:"Max Level"=7
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:fireproof" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:gilded" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
+"mana-and-artifice:transitorystep" {
+    # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
+    I:"Max Level"=1
+
+    # A function to determine the max enchanting power.  The variable "x" is level.  See: https://github.com/uklimaschewski/EvalEx#usage-examples [default: ]
+    S:"Max Power Function"=
+
+    # The min level of this enchantment. [range: 1 ~ 127, default: 1]
+    I:"Min Level"=1
+
+    # A function to determine the min enchanting power. [default: ]
+    S:"Min Power Function"=
+}
+
+
 "minecraft:aqua_affinity" {
     # The max level of this enchantment - normally 1. [range: 1 ~ 127, default: 1]
     I:"Max Level"=1
