--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -71,6 +71,10 @@ general {
     # The dimensions that the deadly module will generate in. [default: [overworld]]
     S:"Generation Dimension Whitelist" <
         overworld
+        the_nether
+        the_end
+        twilightforest:twilightforest
+        boss_tools:moon
      >
 
     # The 1/n chance that a rogue spawner will generate with a CHEST_VALUABLE instead of it's default chest.  0 to disable. [range: 0 ~ 80000, default: 9]
