--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,29 @@ config/sidebar_buttons.json
 config/smoothboot.json
 config/xaerominimap_entities.json
 config/jei/bookmarks.ini
+config/smoothboot.json
+config/modernfix-mixins.properties
+config/oculus.properties
+config/structure_layout_optimizer.json5
+config/pneumaticcraft/thirdparty.cfg
+config/pneumaticcraft/PneumaticArmorHUDLayout.cfg
+config/pneumaticcraft/MicromissileDefaults.cfg
+config/embeddium-options.json
+config/immersive_aircraft.json
+config/modernfix-mixins.properties
+config/oculus.properties
+config/sidebar_buttons.json
+config/smoothboot.json
+config/structure_layout_optimizer.json5
+config/xaerominimap_entities.json
+config/apotheosis/enchantments.cfg
+config/apotheosis/names.cfg
+config/biomesoplenty/biomes.json
+config/konkrete/locals/de_de.local
+config/konkrete/locals/en_us.local
+config/konkrete/locals/pl_pl.local
+config/konkrete/locals/pt_br.local
+config/pneumaticcraft/ArmorFeatureStatus.cfg
+config/pneumaticcraft/MicromissileDefaults.cfg
+config/pneumaticcraft/PneumaticArmorHUDLayout.cfg
+config/pneumaticcraft/thirdparty.cfg
