--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ config/cucumber-tags.json
 config/jecalculation/config.toml
 config/jecalculation/record.json
 XaeroWaypoints_BACKUP240807/New World/config.txt
+shaderpacks/ComplementaryUnbound_r5.1.1.zip.txt
+shaderpacks/ComplementaryUnbound_r5.1.1.zip
+ESM/soundsMuffled.dat
+ESM/Minecraft Server/anchors.dat
