--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ config/fasterladderclimbing-client.toml
 config/gravestone-client.toml
 config/solcarrot-client.toml
 config/farmersdelight-client.toml
+screenshots/*
