fixed night hunters, fixed apotheosis and output of dynamos

--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -22,7 +22,7 @@ affixes {
 
 bosses {
     # If boss items are always cursed.  Enable this if you want bosses to be less overpowered by always giving them a negative effect. [default: false]
-    B:"Curse Boss Items"=false
+    B:"Curse Boss Items"=true
 
     # The 1/n chance that a naturally spawned mob that can see the sky is transformed into a boss.  0 to disable. [range: 0 ~ 500000, default: 85]
     I:"Surface Boss Chance"=85
@@ -84,19 +84,19 @@ general {
 
 rarity {
     # The threshold for this rarity.  The percentage chance of this rarity appearing is equal to (previous threshold - this threshold) / 10. [range: 0 ~ 1000, default: 400]
-    I:common=400
+    I:common=995
 
     # The threshold for this rarity.  The percentage chance of this rarity appearing is equal to (previous threshold - this threshold) / 10. [range: 0 ~ 1000, default: 950]
-    I:epic=950
+    I:epic=999
 
     # The threshold for this rarity.  The percentage chance of this rarity appearing is equal to (previous threshold - this threshold) / 10. [range: 0 ~ 1000, default: 1000]
     I:mythic=1000
 
     # The threshold for this rarity.  The percentage chance of this rarity appearing is equal to (previous threshold - this threshold) / 10. [range: 0 ~ 1000, default: 880]
-    I:rare=880
+    I:rare=997
 
     # The threshold for this rarity.  The percentage chance of this rarity appearing is equal to (previous threshold - this threshold) / 10. [range: 0 ~ 1000, default: 700]
-    I:uncommon=700
+    I:uncommon=996
 }
 
 
