--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -10,7 +10,7 @@ affixes {
      >
 
     # If mythic items are unbreakable. [default: true]
-    B:"Mythic Unbreakable"=true
+    B:"Mythic Unbreakable"=false
 
     # The 1/n chance that a naturally spawned mob will be granted an affix item. 0 to disable. [range: 0 ~ 500000, default: 125]
     I:"Random Affix Chance"=125
