more challanging champions

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ screenshots/*
 essential/*
 config/presencefootsteps/userconfig.json
 config/ambientsounds-client.json
+ESM/KADDE_V - Pmrgite pjlst/anchors.dat
