--- a/defaultconfigs/champions-ranks.toml
+++ b/defaultconfigs/champions-ranks.toml
@@ -10,7 +10,7 @@
   tier = 1
   numAffixes = 1
   defaultColor = 0xffff00
-  chance = 0.05
+  chance = 0.3
   growthFactor = 1
   effects = []
   presetAffixes = []
@@ -19,22 +19,86 @@
   numAffixes = 2
   defaultColor = 0xff9900
   chance = 0.2
-  growthFactor = 4
+  growthFactor = 2
   effects = []
   presetAffixes = []
 [[ranks]]
   tier = 3
   numAffixes = 3
   defaultColor = 0x66ffff
-  chance = 0.2
-  growthFactor = 9
+  chance = 0.1
+  growthFactor = 4
   effects = []
   presetAffixes = []
 [[ranks]]
   tier = 4
   numAffixes = 4
   defaultColor = 0xcc33ff
-  chance = 0.2
-  growthFactor = 16
+  chance = 0.05
+  growthFactor = 6
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 5
+  numAffixes = 5
+  defaultColor = 0xf54002
+  chance = 0.025
+  growthFactor = 7
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 6
+  numAffixes = 6
+  defaultColor = 0x9f4399
+  chance = 0.0125
+  growthFactor = 8
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 7
+  numAffixes = 7
+  defaultColor = 0x24ad5e
+  chance = 0.00625
+  growthFactor = 9
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 8
+  numAffixes = 8
+  defaultColor = 0xe81927
+  chance = 0.003125
+  growthFactor = 10
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 9
+  numAffixes = 9
+  defaultColor = 0xf3e440
+  chance = 0.0015625
+  growthFactor = 12
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 10
+  numAffixes = 10
+  defaultColor = 0x8ca1fc
+  chance = 0.00078125
+  growthFactor =16
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 11
+  numAffixes = 11
+  defaultColor = 0x0d49fc
+  chance = 0.000390625
+  growthFactor = 20
+  effects = []
+  presetAffixes = []
+[[ranks]]
+  tier = 12
+  numAffixes = 12
+  defaultColor = 0x3cfe96
+  chance = 0.0001953125
+  growthFactor = 40
   effects = []
   presetAffixes = []
