added plastic production, added more detailed immersive engineering questline

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ essential/*
 config/presencefootsteps/userconfig.json
 config/ambientsounds-client.json
 ESM/KADDE_V - Pmrgite pjlst/anchors.dat
+backups/*
