--- a/defaultconfigs/champions-affixes.toml
+++ b/defaultconfigs/champions-affixes.toml
@@ -72,7 +72,7 @@
   mobPermission = "BLACKLIST"
 [[affixes]]
   identifier = "plagued"
-  enabled = true
+  enabled = false
   minTier = 1
   mobList = []
   mobPermission = "BLACKLIST"
